--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@ nav ul li a {
   background-size: cover;
   grid-column: 1/3;
   text-align: center;
-
   transition: 0.3s;
 }
 
@@ -197,7 +196,8 @@ nav ul li a {
   text-align: center;
   transition: 0.3s;
   background-size: cover;
-  grid-row: 2/4;
+  grid-row: 2/3;
+  grid-column: 1/3;
 }
 .single-project-4 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -208,30 +208,8 @@ nav ul li a {
   text-align: center;
   transition: 0.3s;
   background-size: cover;
-}
-.single-project-5 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/weatherimg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  transition: 0.3s;
-  background-size: cover;
-  grid-row: 4;
-  grid-column: 1/4;
-}
-.single-project-6 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img//tubeimg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  transition: 0.3s;
-  background-size: cover;
   grid-row: 3;
-  grid-column: 2/4;
+  grid-column: 1/4;
 }
 
 /*endsingle projects*/
@@ -259,22 +237,11 @@ nav ul li a {
   .single-project-4 {
     min-height: 250px;
   }
-  .single-project-5 {
-    min-height: 250px;
-  }
-  .single-project-6 {
-    min-height: 250px;
-  }
 }
 
 @media (max-width: 900px) {
   #button-for-all-devices {
     display: inline-block;
-  }
-  #exit-hamburger {
-    display: inline-block;
-    color: #fff;
-    font-size: 2rem;
   }
 
   .header-container {
@@ -324,6 +291,9 @@ nav ul li a {
 @media (max-width: 375px) {
   .my-hello {
     right: 90px;
+  }
+  .navbar {
+    color: #333;
   }
 }
 /*end media queries*/
