--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   width: 100%;
   height: 100%;
 }
+ul {
+  padding: 0;
+  list-style-type: none;
+}
 .container {
   width: 80%;
   margin: 0 auto;
@@ -297,143 +301,106 @@ nav ul li a {
   }
 }
 /*end media queries*/
-/*contact-form-container*/
-.the-container {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/contactimg.jpeg");
-  background-size: cover;
-  min-height: 120vh;
-  background-repeat: no-repeat;
-  background-position: center;
+
+/*start contact form*/
+.container-contact {
+  background-image: linear-gradient(#48c6ef, #6f86d6);
+  color: #485e74;
+  padding-bottom: 40px;
 }
-input:focus ~ label,
-textarea:focus ~ label,
-input:valid ~ label,
-textarea:valid ~ label {
-  font-size: 0.75em;
-  color: #999;
-  top: -5px;
-  -webkit-transition: all 0.225s ease;
-  transition: all 0.225s ease;
+.container-contact h1 {
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
-.styled-input {
-  float: left;
-  width: 293px;
-  margin: 1rem 0;
-  position: relative;
-  border-radius: 4px;
+.contact-container-for-portfolio {
+  max-width: 80%;
+  margin: 0 auto;
+  box-shadow: 0 0 20px rgba(72, 94, 116, 0.7);
 }
-
-@media only screen and (max-width: 768px) {
-  .styled-input {
-    width: 100%;
-  }
+.contact-container-for-portfolio > * {
+  padding: 1em;
 }
-
-.styled-input label {
-  color: #999;
-  padding: 1.3rem 30px 1rem 30px;
-  position: absolute;
-  top: 10px;
-  left: 0;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  pointer-events: none;
-}
-
-.styled-input.wide {
-  width: 650px;
-  max-width: 100%;
-}
-
-input,
-textarea {
-  padding: 30px;
-  border: 0;
-  width: 100%;
-  font-size: 1rem;
-  background-color: #f8f8f8;
-  color: #2d2d2d;
-  border-radius: 4px;
-}
-
-input:focus,
-textarea:focus {
-  outline: 0;
-}
-
-input:focus ~ span,
-textarea:focus ~ span {
-  width: 100%;
-  -webkit-transition: all 0.075s ease;
-  transition: all 0.075s ease;
-}
-
-textarea {
-  width: 100%;
-  min-height: 15em;
-}
-
-.input-container {
-  width: 650px;
-  max-width: 100%;
-  margin: 20px auto 25px auto;
-}
-
-.submit-btn {
-  float: right;
-  padding: 7px 35px;
-  border-radius: 60px;
-  display: inline-block;
-  background-color: #4b8cfb;
-  color: white;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.07);
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
-}
-
-.submit-btn:hover {
-  transform: translateY(1px);
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.09);
-}
-
-@media (max-width: 768px) {
-  .submit-btn {
-    width: 100%;
-    float: none;
-    text-align: center;
-  }
-}
-
-input[type="checkbox"] + label {
-  color: #ccc;
-  font-style: italic;
-}
-
-input[type="checkbox"]:checked + label {
-  color: #f00;
-  font-style: normal;
-}
-.the-container h1 {
-  font-family: "Poppins", sans-serif, "arial";
-  font-weight: 600;
-  font-size: 72px;
-  color: white;
+.contact-branding {
   text-align: center;
 }
-
-.the-container h4 {
-  font-family: "Roboto", sans-serif, "arial";
-  font-weight: 400;
-  font-size: 20px;
-  color: #5a8feb;
-  line-height: 1.5;
+.contact-branding span {
+  color: #fff;
+}
+.left-side-container-contact-from-me {
+  background: #c9e6ff;
+}
+.left-side-container-contact-from-me h3 {
+  font-size: 1.6rem;
+}
+.left-side-container-contact-from-me ul li {
+  margin-bottom: 15px;
+}
+.left-side-container-contact-from-me h3,
+.left-side-container-contact-from-me ul {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+.right-side-container-contact-me {
+  background: #f9feff;
+}
+/*form styles*/
+.right-side-container-contact-me form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+.right-side-container-contact-me form p {
+  margin: 0;
+}
+.right-side-container-contact-me form label {
+  display: block;
+}
+.right-side-container-contact-me form .full {
+  grid-column: 1/3;
+}
+.right-side-container-contact-me button,
+.right-side-container-contact-me input,
+.right-side-container-contact-me textarea {
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #c9e6ff;
 }
 
-/*contact-form-container*/
-#exit-hamburger {
-  display: none;
+.right-side-container-contact-me form button {
+  background: #c9e6ff;
+  border: 0;
+  text-transform: uppercase;
 }
+.right-side-container-contact-me button:hover,
+.right-side-container-contact-me button:focus {
+  background: #92bde7;
+  color: #fff;
+  outline: 0;
+  transition: background-color 0.5s ease-out;
+  cursor: pointer;
+}
+@media (min-width: 700px) {
+  .contact-container-for-portfolio {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .contact-container-for-portfolio > * {
+    padding: 2em;
+  }
+
+  .left-side-container-contact-from-me h3,
+  .left-side-container-contact-from-me ul {
+    text-align: left;
+  }
+}
+/*end form styles*/
+/*end  contact form*/
+/*footer*/
+footer {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #555;
+  color: #fff;
+}
+/*end footer*/
