--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,8 @@ a {
   right: 0;
   width: 10px;
   height: 100%; /*
-  background-image: linear-gradient(135deg, #ffd26f 10%, #3677ff 100%);*/
-  background-image: linear-gradient(135deg, #7058a3 10%, #c186eb 100%);
-  /* background: linear-gradient(to top, #008aff, #00ffe7);*/
+  background-image: linear-gradient(135deg, #7058a3 10%, #c186eb 100%);*/
+  background: rgb(110, 110, 110);
   animation: progressbar-animate 5s linear infinite;
 }
 @keyframes progressbar-animate {
@@ -65,7 +64,7 @@ a {
   50% {
     filter: hue-rotate(360deg);
   }
-}
+} /*
 #progressbar::before {
   content: "";
   position: absolute;
@@ -75,7 +74,7 @@ a {
   height: 100%;
   background: linear-gradient(red, blue);
   filter: blur(10px);
-}
+}*/
 #progressbar::after {
   content: "";
   position: absolute;
@@ -83,7 +82,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(red, blue);
+  background: linear-gradient(#555);
   filter: blur(30px);
 }
 /*end scroll bar*/
@@ -202,8 +201,8 @@ nav ul li a {
 }
 
 .before-hover-effect:hover {
-  transform: translateY(-5px);
 }
+
 .single-project-1 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("../assets/img/ecommerceimg.PNG");
