--- a/css/style.css
+++ b/css/style.css
@@ -172,140 +172,166 @@ nav ul li a {
 /*end wrapper-for-my-button-and-hello*/
 /**/
 /**/
-.big-container-projects {
-  background-color: #f8f6f6;
-  padding-top: 80px;
-  padding-bottom: 80px;
-  color: #333;
-  overflow-x: hidden;
-  width: 100%;
-}
-.projects-wrapper {
-  display: grid;
-
-  grid-template-columns: 1fr 1fr 1fr;
-
-  gap: 15px;
-  grid-auto-rows: minmax(250px, auto);
-}
-/**/
-/*single projects*/
-/**/
-.projects-header {
-  text-align: center;
-  position: relative;
-  bottom: 40px;
-}
-.projects-header h1 {
-  font-size: 3.5rem;
-}
-
-.before-hover-effect:hover {
-}
-
-.single-project-1 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/ecommerceimg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  grid-column: 1/3;
-  text-align: center;
-  transition: 0.3s;
-}
-
-.wrapper-for-descriptions-and-links {
-  position: relative;
-  top: 60px;
+.portfolio-intro h1 {
   color: #fff;
-}
-.wrapper-for-descriptions-and-links h3 {
-  color: rgb(23, 147, 255);
-  font-weight: bolder;
-  font-size: 1.5rem;
-}
-.links-for-all-projects-just-styles {
-  font-size: 2rem;
-  color: rgb(240, 240, 240);
-  background-color: #333;
-  padding: 10px;
-  border-radius: 50%;
-}
-.links-for-all-projects-just-styles:hover {
-  color: rgb(0, 135, 255);
-  background-color: #fff;
-}
-.single-project-2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/netfliximg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
   text-align: center;
-  transition: 0.3s;
-  background-size: cover;
-  grid-column: 3;
-  grid-row: 1/3;
-}
-.single-project-3 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/covidimg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  transition: 0.3s;
-  background-size: cover;
-  grid-row: 2/3;
-  grid-column: 1/3;
-}
-.single-project-4 {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/cryptoimg.PNG");
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  transition: 0.3s;
-  background-size: cover;
-  grid-row: 3;
-  grid-column: 1/4;
+  font-size: 3rem;
+  padding: 50px 0 40px 0;
 }
 
+:root {
+  --clr-neutral-900: hsl(207, 19%, 9%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-400: hsl(142, 90%, 61%);
+}
+.wrapper-for-all-projects {
+  background: var(--clr-neutral-900);
+  padding: 0 0 60px 0;
+}
+/*card*/
+/*single cards*/
+.card-1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/ecommerceimg.PNG");
+}
+.card-2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/weatherimg.PNG");
+  background-position: center;
+}
+.card-3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/netfliximg.PNG");
+}
+.card-4 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/covidimg.PNG");
+}
+.card-5 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/cryptoimg.PNG");
+}
+.card-6 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../assets/img/tubeimg.PNG");
+}
+/*single cards*/
+.project-container {
+  margin: 0 auto;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+.project-card:hover,
+.project-card:focus-within {
+  transform: scale(1.05);
+}
+
+.project-card {
+  color: var(--clr-neutral-100);
+  /*background-image: url("https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?cs=srgb&dl=pexels-negative-space-169573.jpg&fm=jpg");*/
+  background-size: cover;
+  padding: 10rem 0 0;
+  max-width: 35ch;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  transition: transform 0.5s ease;
+}
+.card-content {
+  --padding: 1.5rem;
+  padding: var(--padding);
+  background: linear-gradient(
+    hsl(0 0% 0% / 0),
+    hsl(20 0% 0% / 0.3) 20%,
+    hsl(0 0% 0% / 1)
+  );
+}
+@media (hover) {
+  .card-content {
+    transform: translateY(65%);
+    transition: transform 0.5s ease;
+  }
+  .card-content > *:not(.card-title) {
+    opacity: 0;
+    transition: opacity 0.5s linear;
+  }
+  .project-card:hover .card-content {
+    transform: translateY(0);
+  }
+}
+
+.project-card:hover .card-content > * {
+  opacity: 1;
+}
+
+.card-title {
+  position: relative;
+  width: max-content;
+}
+.card-body {
+  color: rgb(255 255 255 / 0.8);
+  padding: 10px 0;
+}
+.card-title::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  width: calc(100% + var(--padding));
+  background: var(--clr-neutral-400);
+  left: calc(var(--padding) * -1);
+  bottom: 0;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in;
+  transform-origin: left;
+  bottom: -2px;
+}
+.project-card:hover .card-title::after {
+  transform: scaleX(1);
+}
+.button-portfolio {
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  color: var(--clr-neutral-900);
+  background-color: var(--clr-neutral-400);
+  padding: 0.5em 1.25em;
+  border-radius: 0.25em;
+}
+.button-portfolio:hover,
+.button-portfolio:focus {
+  background-color: var(--clr-neutral-100);
+}
+/*media queries*/
+@media (max-width: 1100px) {
+  .project-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 725px) {
+  .project-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+/*end media queries*/
 /*endsingle projects*/
 /**/
 /**/
 
 /*media queries*/
 
-@media (max-width: 1000px) {
-  .projects-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex: 50%;
-  }
-  .single-project-1 {
-    min-height: 250px;
-  }
-  .single-project-2 {
-    min-height: 250px;
-  }
-  .single-project-3 {
-    min-height: 250px;
-  }
-  .single-project-4 {
-    min-height: 250px;
-  }
-}
-
 @media (max-width: 900px) {
   #button-for-all-devices {
     display: inline-block;
   }
   .navbar ul li {
-    padding: 5px;
+    padding: 6px;
+  }
+  .navbar ul li:nth-child(3) {
+    padding-bottom: 15px;
   }
   .header-container {
     padding-left: 100px;
@@ -325,9 +351,6 @@ nav ul li a {
   }
   .navbar ul li a {
     color: #fff;
-  }
-  .projects-wrapper {
-    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 800px) {
