--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
   right: 0;
   width: 10px;
   height: 100%;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgb(143, 141, 141);
 }
 #progressbar {
   z-index: 101;
@@ -141,17 +141,8 @@ a {
   width: 10px;
   height: 100%; /*
   background-image: linear-gradient(135deg, #7058a3 10%, #c186eb 100%);*/
-  background: rgb(110, 110, 110);
+  background: #ff7a59;
   animation: progressbar-animate 5s linear infinite;
-}
-@keyframes progressbar-animate {
-  0%,
-  100% {
-    filter: hue-rotate(0deg);
-  }
-  50% {
-    filter: hue-rotate(360deg);
-  }
 } /*
 #progressbar::before {
   content: "";
@@ -170,24 +161,12 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(#555);
+  background: #ff7a59;
   filter: blur(30px);
 }
 /*end scroll bar*/
 /*nav*/
 
-.header-container {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/img/backgroundimg.jpeg");
-  height: 650px;
-  color: #fff;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px;
-  overflow-x: hidden;
-}
 .navbar ul li a:hover {
   background-color: #ff7a59;
   cursor: pointer;
@@ -227,38 +206,145 @@ nav ul li a {
 }
 /*end nav*/
 /*wrapper-for-my-button-and-hello*/
-.wrapper-for-my-button-and-hello {
-  position: relative;
-  top: 150px;
-  align-items: center;
-  text-align: center;
-}
+
 .my-hello {
+  background-color: transparent;
   position: relative;
-  bottom: 40px;
-  font-size: 4.4rem;
+  bottom: 50px;
 }
 .my-hello span:hover {
-  display: inline-block;
-  transform: translateY(-3px);
+  display: inline;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fff;
 }
 
-.resume-button {
-  position: relative;
-  top: 20px;
-  background-color: #333;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 70px;
-}
 /*end wrapper-for-my-button-and-hello*/
-/**/
+/*header animation*/
+.animation-area-text {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 200px;
+}
+.animation-area a {
+  cursor: pointer;
+  border: 1px solid #3498db;
+  background-color: transparent;
+  padding: 10px;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 1.5em;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+}
+.animation-area-text h1 {
+  font-size: 4rem;
+  color: #333;
+}
+@media (max-width: 1170px) {
+  .animation-area-text h1 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 775px) {
+  .animation-area-text h1 {
+    font-size: 2.5rem;
+    flex-basis: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .animation-area-text h1 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 425px) {
+  .animation-area-text h1 {
+    font-size: 1.5rem;
+    margin-left: 25%;
+  }
+  .animation-area-text a {
+    margin-right: 40%;
+  }
+  .branding {
+    font-size: 1.5em;
+  }
+}
+
+.animation-area {
+  background: linear-gradient(to left, #8942a8, #ba382f);
+  width: 100%;
+  height: 100vh;
+}
+.box-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.box-area li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 20s linear infinite;
+  bottom: -150px;
+}
+.box-area li:nth-child(1) {
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(2) {
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+.box-area li:nth-child(3) {
+  left: 70%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+}
+.box-area li:nth-child(4) {
+  left: 42%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 15s;
+}
+.box-area li:nth-child(5) {
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+.box-area li:nth-child(6) {
+  left: 15%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+}
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-800px) rotate(360deg);
+    opacity: 0;
+  }
+}
 /**/
 .portfolio-intro h1 {
   color: #fff;
