--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,33 @@ a {
 }
 /*end scroll bar*/
 /*nav*/
+.branding {
+}
+.branding-container {
+  color: #555;
+  font-family: "Dancing Script", cursive;
+}
+.branding-description {
+  font-size: 1.2rem;
+  text-align: center;
+  font-weight: 600;
+}
+.nav-tag-nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.media-links a {
+  text-decoration: none;
+}
+.media-links .fab:hover {
+  color: #ff7a59;
+}
+.nav-tag-nav-bar .fab {
+  font-size: 1.7rem;
+  color: #000;
+  margin-right: 10px;
+}
 
 .navbar ul li a:hover {
   background-color: #ff7a59;
@@ -195,9 +222,7 @@ nav ul {
 nav ul {
   display: inline-block;
 }
-.navbar ul li {
-  margin-top: 10px;
-}
+
 .navbar ul li a {
   padding: 10px;
 }
@@ -231,20 +256,26 @@ nav ul li a {
   text-align: center;
   padding-top: 200px;
 }
-.animation-area a {
+.animation-area-text a {
   cursor: pointer;
   border: 1px solid #3498db;
   background-color: transparent;
-  padding: 10px;
-  border-radius: 50%;
+  padding: 5px 10px;
+  border-radius: 40px;
   color: #fff;
   font-size: 1.5em;
+  z-index: 901;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+}
+.animation-area-text a:hover {
+  background-color: #ff7a59;
+  cursor: pointer;
 }
 .animation-area-text h1 {
   font-size: 4rem;
   color: #333;
 }
+
 @media (max-width: 1170px) {
   .animation-area-text h1 {
     font-size: 3rem;
@@ -261,21 +292,34 @@ nav ul li a {
     font-size: 2.5rem;
   }
 }
+@media (max-width: 540px) {
+  .animation-area-text h1 {
+    font-size: 2rem;
+  }
+}
+
 @media (max-width: 425px) {
   .animation-area-text h1 {
     font-size: 1.5rem;
-    margin-left: 25%;
+  }
+  .animation-area-text {
+    padding-left: 20%;
   }
   .animation-area-text a {
-    margin-right: 40%;
+    position: relative;
+    right: 45%;
   }
+  .navbar {
+    padding-top: 22px;
+  }
+
   .branding {
     font-size: 1.5em;
   }
 }
 
 .animation-area {
-  background: linear-gradient(to left, #8942a8, #ba382f);
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
   width: 100%;
   height: 100vh;
 }
@@ -500,9 +544,14 @@ nav ul li a {
 @media (max-width: 900px) {
   #button-for-all-devices {
     display: inline-block;
+    margin-top: 13px;
+  }
+  .navbar ul {
+    margin-top: 23px;
   }
   .navbar ul li {
     padding: 6px;
+    margin: 10px;
   }
   .navbar ul li:nth-child(3) {
     padding-bottom: 15px;
@@ -560,7 +609,9 @@ nav ul li a {
 
 /*start contact form*/
 .container-contact {
-  background: #c2c3cc;
+  background-color: #63a4ff;
+  background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
+
   color: #485e74;
   padding-bottom: 40px;
 }
