--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ a {
   width: 10px;
   height: 100%; /*
   background-image: linear-gradient(135deg, #7058a3 10%, #c186eb 100%);*/
-  background: #ff7a59;
+  background: #f8f8f8;
   animation: progressbar-animate 5s linear infinite;
 } /*
 #progressbar::before {
@@ -161,7 +161,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #ff7a59;
+  background: #ddd;
   filter: blur(30px);
 }
 /*end scroll bar*/
@@ -600,8 +600,7 @@ nav ul li a {
 
 /*start contact form*/
 .container-contact {
-  background-color: #63a4ff;
-  background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
+  background-color: #8ab6d6;
 
   color: #485e74;
   padding-bottom: 40px;
