--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a {
   position: absolute;
   width: 5%;
   height: 10%;
-  background-color: white;
+  background-color: #fff;
   border-radius: 50%;
   bottom: 0.2em;
   left: -5%;
@@ -395,10 +395,11 @@ nav ul li a {
 }
 /**/
 .portfolio-intro h1 {
-  color: #333333;
+  color: #fff;
   text-align: center;
   font-size: 3rem;
   padding: 50px 0 40px 0;
+  letter-spacing: 5px;
 }
 
 :root {
@@ -407,7 +408,7 @@ nav ul li a {
   --clr-neutral-400: hsl(142, 90%, 61%);
 }
 .wrapper-for-all-projects {
-  background: #ddd;
+  background: #1b1d1f;
   padding: 0 0 60px 0;
 }
 
@@ -491,6 +492,7 @@ nav ul li a {
 .card-title {
   position: relative;
   width: max-content;
+  letter-spacing: 2.5px;
 }
 .card-body {
   color: rgb(255 255 255 / 0.8);
