--- a/css/style.css
+++ b/css/style.css
@@ -35,92 +35,84 @@ a {
 }
 /*animation*/
 /*start load*/
-.loader-page-wrapper {
-  height: 100%;
+.loader-container {
   width: 100%;
+  display: inline-block;
+  text-align: center;
+
+  background-image: #2680c2;
+  -webkit-box-shadow: 0px 0px 30px 1px #103136 inset;
+  box-shadow: 0px 0px 30px 1px #103136 inset;
+  position: absolute;
   top: 0;
   left: 0;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to right, silver, teal);
-  z-index: 996;
-}
-
-.loader {
-  width: 16em;
-  height: 8em;
-  position: relative;
-  overflow: hidden;
-}
-
-.loader::before,
-.loader::after {
-  content: "";
-  position: absolute;
+  right: 0;
   bottom: 0;
 }
-
-.loader::before {
-  width: inherit;
-  height: 0.2em;
-  background-color: hsla(0, 0%, 85%);
-}
-
-.loader::after {
-  box-sizing: border-box;
-  width: 50%;
-  height: inherit;
-  border: 0.2em solid hsla(0, 0%, 85%);
+.loader {
+  position: relative;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  left: 25%;
+  margin: 75px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.loader-5 {
+  border: 8px dotted rgba(255, 255, 0, 1);
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  -webkit-animation: dotted-spin 1s linear infinite;
+  animation: dotted-spin 1s linear infinite;
+  border-bottom-width: 1px;
+  border-bottom-color: rgba(255, 255, 0, 0.3);
+  border-left-width: 2px;
+  border-left-color: rgba(255, 255, 0, 0.5);
+  border-top-width: 3px;
+  border-right-width: 4px;
+  border-top-color: rgba(255, 255, 0, 0.7);
+  margin-top: 280px;
 }
 
-.loader span {
+.loader-5 .loader-pacman,
+.loader-pacman {
   position: absolute;
-  width: 5%;
-  height: 10%;
-  background-color: #fff;
-  border-radius: 50%;
-  bottom: 0.2em;
-  left: -5%;
-  animation: 2s linear infinite;
-  transform-origin: 50% -3em;
-  animation-name: run, rotating;
+  top: 40px;
+  left: 25px;
+  width: 0px;
+  height: 0px;
+  border-right: 12px solid transparent;
+  border-top: 12px solid rgba(255, 255, 0, 1);
+  border-left: 12px solid rgba(255, 255, 0, 1);
+  border-bottom: 12px solid rgba(255, 255, 0, 1);
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
-
-.loader span:nth-child(2) {
-  animation-delay: 0.075s;
-}
-.loader span:nth-child(3) {
-  animation-delay: 0.15s;
-}
-
-@keyframes run {
+@-webkit-keyframes dotted-spin {
   0% {
-    left: -5%;
-  }
-  10%,
-  60% {
-    left: calc((100% - 5%) / 2);
-  }
-  70%,
-  100% {
-    left: 100%;
-  }
-}
-
-@keyframes rotating {
-  0%,
-  10% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
-  60%,
   100% {
-    transform: rotate(-1turn);
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
+
+@keyframes dotted-spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+
 /*end  load*/
 /*scroll bar*/
 ::-webkit-scrollbar {
