--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,9 @@ a {
 /*start load*/
 .loader-container {
   width: 100%;
-  display: inline-block;
-  text-align: center;
-
-  background-image: #2680c2;
-  -webkit-box-shadow: 0px 0px 30px 1px #103136 inset;
-  box-shadow: 0px 0px 30px 1px #103136 inset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   left: 0;
@@ -75,69 +72,22 @@ a {
   bottom: 0;
 }
 .loader {
-  position: relative;
-  width: 60px;
-  height: 60px;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
-  margin: 75px;
-  display: inline-block;
-  vertical-align: middle;
-}
-.loader-5 {
-  border: 8px dotted rgba(255, 255, 0, 1);
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
-  -webkit-animation: dotted-spin 1s linear infinite;
-  animation: dotted-spin 1s linear infinite;
-  border-bottom-width: 1px;
-  border-bottom-color: rgba(255, 255, 0, 0.3);
-  border-left-width: 2px;
-  border-left-color: rgba(255, 255, 0, 0.5);
-  border-top-width: 3px;
-  border-right-width: 4px;
-  border-top-color: rgba(255, 255, 0, 0.7);
-  margin-top: 280px;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
 }
 
-.loader-5 .loader-pacman,
-.loader-pacman {
-  position: absolute;
-  top: 40px;
-  left: 25px;
-  width: 0px;
-  height: 0px;
-  border-right: 12px solid transparent;
-  border-top: 12px solid rgba(255, 255, 0, 1);
-  border-left: 12px solid rgba(255, 255, 0, 1);
-  border-bottom: 12px solid rgba(255, 255, 0, 1);
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-}
-@-webkit-keyframes dotted-spin {
+@keyframes spin {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
+    transform: rotate(360deg);
   }
 }
-
-@keyframes dotted-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-
 /*end  load*/
 /*scroll bar*/
 
