--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ nav ul li a {
   text-align: center;
   padding-top: 200px;
 }
-.animation-area-text a {
+.resume {
   cursor: pointer;
   border: 1px solid #3498db;
   background-color: transparent;
@@ -223,8 +223,8 @@ nav ul li a {
   z-index: 901;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
 }
-.animation-area-text a:hover {
-  background-color: #ff9c3c;
+.resume:hover {
+  background-color: var(--clr-neutral-200);
   cursor: pointer;
 }
 .animation-area-text h1 {
