--- a/css/style.css
+++ b/css/style.css
@@ -350,19 +350,22 @@ nav ul li a {
   width: 100%;
   height: 100%;
   background-color: #323232;
-  padding: 10px 0;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
 }
 .skills-wrapper .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-  margin: 40px 0px 50px 70px;
+  /* margin: 40px 0px 50px 70px;*/
   justify-items: center;
   row-gap: 5rem;
 }
 .skills-wrapper .container .fab {
-  font-size: 4.5rem;
+  font-size: 4.6rem;
   transition: 0.2s;
 }
 
@@ -377,24 +380,28 @@ nav ul li a {
 .skills-no-icon img:hover {
   transform: scale(1.1);
 }
+.skills-header {
+  padding-top: 15px;
+  justify-content: center;
+  margin-bottom: 40px;
+}
 .skills-header h2 {
-  font-size: 2rem;
-  border-bottom: solid 3px #b6a9a9;
+  font-size: 2.2rem;
   display: inline-block;
   color: #dadada;
   padding: 0 2px;
-  margin: 2rem 0 0 5rem;
+  /* margin: 2rem 0 0 5rem;*/
 }
 @media (max-width: 750px) {
   .skills-wrapper .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin-left: 30px;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (max-width: 425px) {
-  .skills-header h2 {
-    margin-left: 10px;
+  .skills-wrapper .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 /*end skills*/
