--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ nav ul li a {
 /*single cards*/
 .card-1 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../assets/img/ecommerceimg.jpg");
+    url("../assets/img/emailvalidation.PNG");
 }
 .card-2 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
