--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ nav ul li a {
 }
 .card-4 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../assets/img/covidimg.png");
+    url("../assets/img/coming-soon.jpeg");
 }
 .card-5 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
