📽️Added a project link
I added a link to my new website made in wordpress.

--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ nav ul li a {
 }
 .card-4 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../assets/img/coming-soon.jpeg");
+    url("../assets/img/wordpress-Websiteecostrip.png");
 }
 .card-5 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
