💪Added a skill to skill section
I added a skill i recently learned to my skills section.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ a {
   justify-content: space-between;
 }
 /*icons*/
+.fa-wordpress{
+  color: #103136;
+}
 .fa-html5 {
   color: rgb(251, 79, 20);
 }
