--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ nav ul li a {
 .skills-wrapper {
   width: 100%;
   height: 100%;
-  background-color: #323232;
+  background-color: #e0e0e0;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -394,6 +394,7 @@ nav ul li a {
   /* margin: 40px 0px 50px 70px;*/
   justify-items: center;
   row-gap: 5rem;
+  height: 500px;
 }
 .skills-wrapper .container .fab {
   font-size: 4.6rem;
@@ -419,7 +420,7 @@ nav ul li a {
 .skills-header h2 {
   font-size: 2.2rem;
   display: inline-block;
-  color: #dadada;
+  color: #333;
   padding: 0 2px;
   /* margin: 2rem 0 0 5rem;*/
 }
