removes images and rearranged dprojects
made projects more neat and am rearanginf everything and cleanin up ui.

--- a/css/style.css
+++ b/css/style.css
@@ -467,8 +467,8 @@ nav ul li a {
   background-position: left;
 }
 .card-3 {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../assets/img/netfliximg.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+    url("../assets/img/WeatherPPImage.png");
 }
 .card-4 {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
