--- a/css/style.css
+++ b/css/style.css
@@ -668,24 +668,37 @@ nav ul li a {
 }
 /*end media queries*/
 /*contact*/
+
 .contact-header h1 {
   font-size: 1.8rem;
   font-weight: 400;
-  display: inline-block;
-  margin-left: 5rem;
-  margin-top: 2rem;
-  border-bottom: solid 3px #ffffff;
   color: #fff;
+  border-bottom: 3px solid #fff;
+  display: inline-block; 
+  padding-bottom: 5px;
+  margin: 0 auto 1rem; 
 }
 .contact-wrapper {
   min-height: 400px;
   background: #103136;
+  padding: 60PX 0;
 }
 .contact-wrapper .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 5rem 0 0 5rem;
+  margin: 2rem 0 0 5rem;
+}
+.contact-subtitle {
+  text-align: center;
+  color: #d1d1d1;
+  font-size: 1.1rem;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.contact-header {
+  text-align: center;
 }
 .contact-wrapper .container div {
   padding: 10px;
@@ -694,6 +707,9 @@ nav ul li a {
 .contact-wrapper .container div:hover {
   background-color: rgba(255, 255, 255, 0.09);
   transition: background-color 0.05s linear;
+   transform: scale(1.1);
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+  transition: 0.3s ease;
 }
 .contact-03 .fas,
 .contact-01 .fas {
